# ocr_setups

./: .gitignore  Dockerfile  README.md  pyproject.toml
ocr/: __init__.py  base.py  checkpoint.py  pdf_utils.py  pipeline.py
ocr/models/: __init__.py  dolphin.py  unlimited_ocr.py
scripts/: __init__.py  process.py
